--- a/vite/package.json
+++ b/vite/package.json
@@ -15,6 +15,7 @@
     "es-module-lexer": "^1.7.0",
     "koa": "^3.0.1",
     "koa-static": "^5.0.0",
-    "magic-string": "^0.30.18"
+    "magic-string": "^0.30.18",
+    "ws": "^8.18.3"
   }
 }
